<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="org.mifos.openbanking.accounts.AccountsFragment"
        android:label="@string/accounts"
        tools:layout="@layout/fragment_accounts" />

    <fragment
        android:id="@+id/navigation_transactions"
        android:name="org.mifos.openbanking.transactions.TransactionsFragment"
        android:label="@string/transactions"
        tools:layout="@layout/fragment_transactions" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="org.mifos.openbanking.ui.notifications.NotificationsFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>